Show wikidump reader progress.
Former-commit-id: 3f2a9f36166cf665ecf273ab9d001c54004d819e